--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
+    "github-markdown-css": "^4.0.0",
+    "js-cookie": "^2.2.1",
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.21.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
